--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,4 +23,8 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	html {
+		background-color: #1E1E1E;
+		color: #ffffff;
+	}
 </style>
