--- a/src/components/HeaderSection.astro
+++ b/src/components/HeaderSection.astro
@@ -1,8 +1,10 @@
 ---
+
 ---
+
 <div class="header">
   <div class="header-left">
-    <h1>ICON</h1>
+    <h1>Profile</h1>
   </div>
   <div class="header-right">
     <ul>
@@ -16,11 +18,25 @@
 <style>
   .header {
     display: flex;
-    
+    align-items: center;
+    height: 80px;
+    margin: 0 80px;
   }
 
-  .header-right ul {
-    display: flex;
-    
+  .header-left {
+    h1 {
+      margin-left: 80px;
+    }
+  }
+
+  .header-right {
+    margin-left: auto;
+    ul {
+      display: flex;
+      list-style: none;
+      li {
+        padding: 0 40px;
+      }
+    }
   }
 </style>
