--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,29 +1,24 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import HeroSection from '../components/HeroSection.astro';
-import AffiliationSection from '../components/AffiliationSection.astro';
-import LicenseSection from '../components/LicenseSection.astro'
-import SkillSection from '../components/SkillSection.astro';
-import ExperienceSection from '../components/ExperienceSection.astro'
+import Layout from "../layouts/Layout.astro";
+import HeroSection from "../components/HeroSection.astro";
+import AffiliationSection from "../components/AffiliationSection.astro";
+import LicenseSection from "../components/LicenseSection.astro";
+import SkillSection from "../components/SkillSection.astro";
+import ExperienceSection from "../components/ExperienceSection.astro";
 ---
 
 <Layout title="Kengo's profile">
-	<main>
-		<HeroSection/>
-		<AffiliationSection/>
-		<LicenseSection/>
-		<SkillSection/>
-		<ExperienceSection/>
-	</main>
+  <main>
+    <HeroSection />
+    <AffiliationSection />
+    <LicenseSection />
+    <SkillSection />
+    <ExperienceSection />
+  </main>
 </Layout>
 
 <style>
-	main {
-		text-align: center;
-	}
-	h1 {
-		color: white;
-		background: green;
-		size: 30px;
-	}
+  main {
+    margin: 0 80px;
+  }
 </style>
