--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,20 +1,80 @@
 ---
 
 ---
+
 <div class="Hero-content">
-  <div>
-    icon
+  <div class="Hero-icon">
+    <img src="/image/icon.JPG" />
   </div>
-  <div>
-    <div>
+  <div class="Hero-right">
+    <div class="Hero-name">
       <h2>Saito Kengo</h2>
       <p>斉藤　賢悟</p>
+    </div>
+    <div class="Hero-where">
+      <p>北海道　岩見沢市出身<br />2003年9月29日生まれ</p>
+    </div>
+    <div class="Hero-sns">
+      <ul>
+        <li><img src="/image/X-icon.svg" alt="X icon" /></li>
+        <li><img src="/image/Instagram-icon.svg" alt="Instagram icon" /></li>
+        <li><img src="/image/github-icon.svg" alt="Instagram icon" /></li>
+        <li><img src="/image/Qiita-icon.svg" alt="Qiita icon" /></li>
+      </ul>
     </div>
   </div>
 </div>
 
 <style>
   .Hero-content {
-    display: flex;
+    height: 580px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+
+    .Hero-icon {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      img {
+        height: 350px;
+        width: 350px;
+        border-radius: 90%;
+      }
+    }
+    .Hero-right {
+      display: grid;
+      grid-template-rows: 1fr 1fr 1fr;
+      text-align: center;
+
+      .Hero-name {
+        margin: auto;
+        h2 {
+          font-size: 3rem;
+        }
+        p {
+          font-size: 1.5rem;
+          color: #9eabb8;
+        }
+      }
+      .Hero-where {
+        p {
+          font-size: 1rem;
+          color: #9eabb8;
+        }
+      }
+      .Hero-sns {
+        margin: 0 auto;
+        ul {
+          display: flex;
+          list-style: none;
+          li {
+            padding: 0 30px;
+            height: 70px;
+            width: 70px;
+          }
+        }
+      }
+    }
   }
 </style>
