iconの位置修正

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -33,9 +33,8 @@
     grid-template-columns: 1fr 2fr;
 
     .Hero-icon {
-      display: flex;
-      align-items: center;
-      text-align: center;
+      margin: auto 0;
+      text-align: right;
       img {
         height: 350px;
         width: 350px;
