--- a/src/components/AffiliationSection.astro
+++ b/src/components/AffiliationSection.astro
@@ -1,9 +1,12 @@
 ---
+
 ---
 
-<div class="affiliation-text">
-  <h2>所属</h2>
-  <div>
+<div class="affiliation-content">
+  <div class="affiliation-left">
+    <h2>所属</h2>
+  </div>
+  <div class="affiliation-right">
     <p>北海道情報専門学校　大学併修科</p>
     <p>北海道情報大学　通信教育部経営情報部　システム情報学科</p>
     <p>2026年卒</p>
@@ -11,7 +14,15 @@
 </div>
 
 <style>
-  .affiliation-text {
+  .affiliation-content {
+    height: 190px;
     display: flex;
+    .affiliation-left {
+      margin: auto;
+    }
+    .affiliation-right {
+      margin: auto;
+      font-size: 1.5rem;
+    }
   }
 </style>
