--- a/src/components/AffiliationSection.astro
+++ b/src/components/AffiliationSection.astro
@@ -19,6 +19,9 @@
     display: flex;
     .affiliation-left {
       margin: auto;
+      h2 {
+        font-size: 2rem;
+      }
     }
     .affiliation-right {
       margin: auto;
