--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -1,14 +1,44 @@
 ---
+
 ---
-<div>
+
+<div class="Experience-content">
   <h2>実績・経験</h2>
-  <div>
-    <p>アクセンチュア株式会社　和魂偉才塾 エンジニア塾　参加予定</p>
-    <p>株式会社PRTIMES ハッカソン　参加予定</p>
-    <p>フロントエンドカンファレンス コアスタッフ</p>
-    <p>Social Change Lab合同会社　長期インターン</p>
-    <p>SAPPORO OPEN DATA HACK　最優秀賞</p>
+  <div class="Experience-text">
+    <ul>
+      <li>2024年9月</li>
+      <li>アクセンチュア株式会社　和魂偉才塾 エンジニア塾　参加予定</li>
+      <li>2024年8月</li>
+      <li>株式会社PRTIMES ハッカソン　参加予定</li>
+      <li>2024年8月</li>
+      <li>フロントエンドカンファレンス コアスタッフ</li>
+      <li>2023年12月〜</li>
+      <li>Social Change Lab合同会社　長期インターン</li>
+      <li>2023年11月</li>
+      <li>SAPPORO OPEN DATA HACK　最優秀賞</li>
+    </ul>
   </div>
 </div>
 
-<style></style>
+<style>
+  .Experience-content {
+    height: 490px;
+    h2 {
+      font-size: 2rem;
+      text-align: center;
+      padding: 2rem;
+    }
+    .Experience-text {
+      font-size: 1.5rem;
+      padding: 30px 150px 0 150px;
+      ul {
+        list-style: none;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        li {
+          padding: 5px 0;
+        }
+      }
+    }
+  }
+</style>
