--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,5 +30,8 @@ const { title } = Astro.props;
 	html {
 		background-color: #1E1E1E;
 		color: #ffffff;
+		body {
+			margin-bottom: 100px;
+		}
 	}
 </style>
