snsリンクの実装

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -16,10 +16,26 @@
     </div>
     <div class="Hero-sns">
       <ul>
-        <li><img src="/image/X-icon.svg" alt="X icon" /></li>
-        <li><img src="/image/Instagram-icon.svg" alt="Instagram icon" /></li>
-        <li><img src="/image/github-icon.svg" alt="Instagram icon" /></li>
-        <li><img src="/image/Qiita-icon.svg" alt="Qiita icon" /></li>
+        <a href="https://x.com/kengo20_03">
+          <li>
+            <img src="/image/X-icon.svg" alt="X icon" />
+          </li>
+        </a>
+        <a href="https://www.instagram.com/ke_n_go00">
+          <li>
+            <img src="/image/Instagram-icon.svg" alt="Instagram icon" />
+          </li>
+        </a>
+        <a href="https://github.com/kengo2003">
+          <li>
+            <img src="/image/github-icon.svg" alt="Instagram icon" />
+          </li>
+        </a>
+        <a href="https://qiita.com/Kengo2003">
+          <li>
+            <img src="/image/Qiita-icon.svg" alt="Qiita icon" />
+          </li>
+        </a>
       </ul>
     </div>
   </div>
@@ -68,9 +84,13 @@
           display: flex;
           list-style: none;
           li {
-            padding: 0 30px;
+            background-color: #1a2633;
             height: 70px;
             width: 70px;
+            margin: 0 20px;
+            padding: 15px 15px;
+            border: 1px solid #334d66;
+            border-radius: 8px;
           }
         }
       }
