タイトルの修正

--- a/src/components/AffiliationSection.astro
+++ b/src/components/AffiliationSection.astro
@@ -4,7 +4,8 @@
 
 <div class="affiliation-content">
   <div class="affiliation-left">
-    <h2>所属</h2>
+    <h2>Affiliation</h2>
+    <p>所属</p>
   </div>
   <div class="affiliation-right">
     <p>北海道情報専門学校　大学併修科</p>
@@ -22,6 +23,10 @@
       h2 {
         font-size: 2rem;
         text-align: right;
+      }
+      p {
+        font-size: 1rem;
+        text-align: center;
       }
     }
     .affiliation-right {
