--- a/src/components/HeaderSection.astro
+++ b/src/components/HeaderSection.astro
@@ -8,7 +8,8 @@
   </div>
   <div class="header-right">
     <ul>
-      <li>TOP</li>
+      <li>affiliation</li>
+      <li>License</li>
       <li>Skill</li>
       <li>experience</li>
     </ul>
