--- a/src/components/LicenseSection.astro
+++ b/src/components/LicenseSection.astro
@@ -4,8 +4,9 @@
 
 <div class="License-content">
   <div class="License-box">
-    <div class="Qualifications">
-      <h2>免許</h2>
+    <div class="License">
+      <h2>License</h2>
+      <p>免許</p>
       <ul>
         <li>普通自動車免許</li>
         <li>自動二輪免許</li>
@@ -13,13 +14,13 @@
         <li>２級小型船舶免許</li>
       </ul>
     </div>
-    <div class="License">
-      <h2>資格</h2>
+    <div class="Qualifications">
+      <h2>Qualifications</h2>
+      <p>資格</p>
       <ul>
         <li>ITパスポート</li>
         <li>基本情報技術者試験</li>
         <li>応用情報技術者試験</li>
-        <li>情報処理安全確保支援士＝＞取得に向け勉強中</li>
       </ul>
     </div>
   </div>
@@ -37,14 +38,15 @@
       grid-template-columns: 1fr 1fr;
       h2 {
         font-size: 2rem;
-        padding: 2rem;
+        padding: 2rem 2rem 0 2rem;
       }
       ul {
         list-style: none;
-        padding-top: 30px;
+        padding-top: 4rem;
       }
       li {
         font-size: 1.5rem;
+        margin-bottom: 5px;
       }
     }
   }
