--- a/src/components/SkillSection.astro
+++ b/src/components/SkillSection.astro
@@ -3,7 +3,8 @@ import SkillCard from "./ui/SkillCard.astro";
 ---
 
 <div class="skill-content">
-  <h2>スキル</h2>
+  <h2>Skill</h2>
+  <p>スキル</p>
   <div>
     <SkillCard />
   </div>
@@ -15,7 +16,7 @@ import SkillCard from "./ui/SkillCard.astro";
     text-align: center;
     h2 {
       font-size: 2rem;
-      padding: 2rem;
+      padding: 2rem 2rem 0 2rem;
     }
   }
 </style>
