--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -36,7 +36,8 @@
         display: grid;
         grid-template-columns: 1fr 3fr;
         li {
-          padding: 5px 0;
+          padding: 10px 0;
+          border-bottom: 1px solid #365069;
         }
       }
     }
