--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -7,11 +7,13 @@
   <div class="Experience-text">
     <ul>
       <li>2024年9月</li>
-      <li>アクセンチュア株式会社　和魂偉才塾 エンジニア塾　参加予定</li>
+      <li>
+        アクセンチュア株式会社　インターン　和魂偉才塾 エンジニア塾　参加予定
+      </li>
       <li>2024年8月</li>
-      <li>株式会社PRTIMES ハッカソン　参加予定</li>
+      <li>株式会社PRTIMES HACKATHON 2024 Summer　参加予定</li>
       <li>2024年8月</li>
-      <li>フロントエンドカンファレンス コアスタッフ</li>
+      <li>フロントエンドカンファレンス北海道2024 コアスタッフ</li>
       <li>2023年12月〜</li>
       <li>Social Change Lab合同会社　長期インターン</li>
       <li>2023年11月</li>
