--- a/src/components/SkillSection.astro
+++ b/src/components/SkillSection.astro
@@ -19,4 +19,13 @@ import SkillCard from "./ui/SkillCard.astro";
       padding: 2rem 2rem 0 2rem;
     }
   }
+  @media screen and (max-width: 599px) {
+    .skill-content {
+      height: 600px;
+      h2 {
+        font-size: 26px;
+        padding-top: 20px;
+      }
+    }
+  }
 </style>
