--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,4 +21,10 @@ import ExperienceSection from "../components/ExperienceSection.astro";
   main {
     margin: 0 80px;
   }
+
+  @media screen and (max-width: 599px) {
+    main {
+      margin: 0;
+    }
+  }
 </style>
