--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -3,7 +3,8 @@
 ---
 
 <div class="Experience-content">
-  <h2>実績・経験</h2>
+  <h2>Achievements and Experience</h2>
+  <p>実績・経験</p>
   <div class="Experience-text">
     <ul>
       <li>2024年9月</li>
@@ -28,7 +29,10 @@
     h2 {
       font-size: 2rem;
       text-align: center;
-      padding: 2rem;
+      padding: 2rem 2rem 0 2rem;
+    }
+    p {
+      text-align: center;
     }
     .Experience-text {
       font-size: 1.5rem;
@@ -40,6 +44,32 @@
         li {
           padding: 10px 0;
           border-bottom: 1px solid #365069;
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 599px) {
+    .Experience-content {
+      height: 490px;
+      h2 {
+        font-size: 26px;
+        padding-top: 20px;
+        padding: 0;
+      }
+      p {
+        text-align: center;
+      }
+      .Experience-text {
+        font-size: 14px;
+        padding: 20px 20px;
+        ul {
+          list-style: none;
+          display: grid;
+          grid-template-columns: 1fr 3fr;
+          li {
+            padding: 10px 0;
+            border-bottom: 1px solid #365069;
+          }
         }
       }
     }
