--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -47,7 +47,6 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 2fr;
-
     .Hero-icon {
       margin: auto 0;
       text-align: right;
@@ -61,7 +60,6 @@
       display: grid;
       grid-template-rows: 1fr 1fr 1fr;
       text-align: center;
-
       .Hero-name {
         margin: auto;
         h2 {
@@ -88,9 +86,55 @@
             height: 70px;
             width: 70px;
             margin: 0 20px;
-            padding: 15px 15px;
+            padding: 15px;
             border: 1px solid #334d66;
             border-radius: 8px;
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 599px) {
+    .Hero-content {
+      height: 450px;
+      display: block;
+      .Hero-icon {
+        text-align: center;
+        padding: 30px 0;
+        img {
+          width: 100px;
+          height: 100px;
+        }
+      }
+      .Hero-right {
+        .Hero-name {
+          h2 {
+            font-size: 2rem;
+          }
+          p {
+            font-size: 1.5rem;
+            color: #9eabb8;
+          }
+        }
+        .Hero-sns {
+          margin: 0 auto;
+          ul {
+            display: flex;
+            list-style: none;
+            li {
+              background-color: #1a2633;
+              height: 50px;
+              width: 50px;
+              margin: 0 10px;
+              padding: 10px;
+              border: 1px solid #334d66;
+              border-radius: 8px;
+              img {
+                height: 40px;
+                width: 40px;
+              }
+            }
           }
         }
       }
