--- a/src/components/LicenseSection.astro
+++ b/src/components/LicenseSection.astro
@@ -50,4 +50,24 @@
       }
     }
   }
+  @media screen and (max-width: 599px) {
+    .License-content {
+      width: 100%;
+      height: 500px;
+      .License-box {
+        display: block;
+        h2 {
+          font-size: 26px;
+          padding-top: 25px;
+        }
+        ul {
+          padding-top: 25px;
+        }
+        li {
+          font-size: 20px;
+          margin-bottom: 5px;
+        }
+      }
+    }
+  }
 </style>
