不要なコードの削除

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -112,24 +112,14 @@
           h2 {
             font-size: 2rem;
           }
-          p {
-            font-size: 1.5rem;
-            color: #9eabb8;
-          }
         }
         .Hero-sns {
-          margin: 0 auto;
           ul {
-            display: flex;
-            list-style: none;
             li {
-              background-color: #1a2633;
               height: 50px;
               width: 50px;
               margin: 0 10px;
-              padding: 10px;
-              border: 1px solid #334d66;
-              border-radius: 8px;
+              padding: 15px 10px 10px 10px;
               img {
                 height: 40px;
                 width: 40px;
