--- a/src/components/ui/SkillContent.astro
+++ b/src/components/ui/SkillContent.astro
@@ -21,6 +21,7 @@ const { text, path } = Astro.props;
     border-radius: 8px;
     display: flex;
     justify-content: center;
+    align-items: center;
     p {
       padding-left: 10px;
     }
