--- a/src/components/ui/SkillCard.astro
+++ b/src/components/ui/SkillCard.astro
@@ -41,15 +41,15 @@ import SkillContent from "./SkillContent.astro";
   @media screen and (max-width: 599px) {
     .skill-content {
       h3 {
-        padding: 10px;
+        padding: 20px;
       }
-      .program-content {
-        display: grid;
-        margin: 0;
-      }
+      .program-content,
       .framework-content {
         display: grid;
+        grid-template: repeat(2, auto) / repeat(2, auto);
+        gap: 15px;
         margin: 0;
+        padding: 20px;
       }
     }
   }
