タイトルにカラー適用

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,9 @@ import ExperienceSection from "../components/ExperienceSection.astro";
 <style>
   main {
     margin: 0 80px;
+    h2 {
+      color: rgb(21 128 61);
+    }
   }
 
   @media screen and (max-width: 599px) {
