--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -7,17 +7,19 @@
   <p>実績・経験</p>
   <div class="Experience-text">
     <ul>
-      <li>2024年9月</li>
-      <li>
-        アクセンチュア株式会社　インターン　和魂偉才塾 エンジニア塾　参加予定
-      </li>
-      <li>2024年8月</li>
-      <li>株式会社PRTIMES HACKATHON 2024 Summer　参加予定</li>
-      <li>2024年8月</li>
+      <li>2024/9/24<br />~27</li>
+      <li>アクセンチュア株式会社　和魂偉才塾 エンジニア塾　参加予定</li>
+      <li>2024/9/18</li>
+      <li>MIERUNE BBQ#11 登壇予定</li>
+      <li>2024/9/15</li>
+      <li>NoMaps STUDENTS 登壇予定</li>
+      <li>2024/8/28<br />~30</li>
+      <li>株式会社PRTIMES HACKATHON 2024 Summer</li>
+      <li>2024/8/24</li>
       <li>フロントエンドカンファレンス北海道2024 コアスタッフ</li>
-      <li>2023年12月〜</li>
+      <li>2023/12〜</li>
       <li>Social Change Lab合同会社　長期インターン</li>
-      <li>2023年11月</li>
+      <li>2023/11</li>
       <li>SAPPORO OPEN DATA HACK　最優秀賞</li>
     </ul>
   </div>
