add: 経験部分の更新

--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -7,27 +7,24 @@
   <p>実績・経験</p>
   <div class="Experience-text">
     <ul>
-      <li>2024/9/24<br />~27</li>
-      <li>アクセンチュア株式会社　和魂偉才塾 エンジニア塾　参加予定</li>
-      <li>2024/9/18</li>
-      <li>MIERUNE BBQ#11 登壇予定</li>
-      <li>2024/9/15</li>
-      <li>NoMaps STUDENTS 登壇予定</li>
-      <li>2024/8/28<br />~30</li>
-      <li>株式会社PRTIMES HACKATHON 2024 Summer</li>
-      <li>2024/8/24</li>
-      <li>フロントエンドカンファレンス北海道2024 コアスタッフ</li>
-      <li>2023/12〜</li>
-      <li>Social Change Lab合同会社　長期インターン</li>
-      <li>2023/11</li>
-      <li>SAPPORO OPEN DATA HACK　最優秀賞</li>
+      <li>
+        2024/9/24~27<br />アクセンチュア株式会社　和魂偉才塾 エンジニア塾　参加
+      </li>
+      <li>2024/9/18<br />MIERUNE BBQ#11 登壇</li>
+      <li>2024/9/15<br />NoMaps STUDENTS 登壇</li>
+      <li>2024/8/28~30<br />株式会社PRTIMES HACKATHON 2024 Summer</li>
+      <li>
+        2024/8/24<br />フロントエンドカンファレンス北海道2024 コアスタッフ
+      </li>
+      <li>2023/12〜<br />Social Change Lab合同会社　長期インターン</li>
+      <li>2023/11<br />SAPPORO OPEN DATA HACK　最優秀賞</li>
     </ul>
   </div>
 </div>
 
 <style>
   .Experience-content {
-    height: 490px;
+    padding-bottom: 50px;
     h2 {
       font-size: 2rem;
       text-align: center;
@@ -41,8 +38,8 @@
       padding: 30px 150px 0 150px;
       ul {
         list-style: none;
-        display: grid;
-        grid-template-columns: 1fr 3fr;
+        /* display: grid;
+        grid-template-columns: 1fr 3fr; */
         li {
           padding: 10px 0;
           border-bottom: 1px solid #365069;
